# rust_web_test

./: .env.example  Cargo.toml  README.md  apply_migration.sh
migrations/: 001_create_users_table.sql  002_add_user_profile_fields.sql  002_create_audit_logs_table.sql  003_add_role_to_users.sql
src/: db.rs  main.rs
src/routes/: audit.rs  auth.rs  crypto.rs  home.rs  mod.rs  password_gen.rs  profile.rs  sysinfo.rs  text_tools.rs  time.rs  users.rs
static/: style.css
templates/: about.html  audit.html  base.html  crypto.html  index.html  login.html  password_gen.html  profile.html  sysinfo.html  text_tools.html  users.html
templates/partials/: time.html
