[package]
name = "rust-dashboard"
version = "0.1.0"
edition = "2024"
default-run = "rust-dashboard"

[lib]
name = "rust_dashboard"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
askama = "0.15.1"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = "0.8.8"
dotenvy = "0.15.7"
futures = "0.3"
password-hash = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql", "chrono"] }
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6.8", features = ["fs"] }
tower-sessions = { version = "0.14.0", features = ["memory-store"] }
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
rand = "0.9.2"
